# libdisc

./: CMakeLists.txt  README.md  meson.build
src/: disc.h  disc_app.c  disc_app.h  disc_endpoint.c  disc_endpoint.h  disc_gateway.c  disc_gateway.h  disc_json.c  disc_json.h  disc_objects.c  disc_objects.h  disc_types.h
